src/test/deca/context/invalid/castInvalid2.deca
class A {

}

{
    A a = new A();
    if (a instanceof float) {
        print("Erreur.");
    }
}
//ERROR :7: